--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "i18next": "^23.10.1",
+    "react-i18next": "^13.5.0",
     "axios": "^1.5.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
